<resources>
    <string name="app_name">Juno Android Assignment</string>
    <string name="fragment_splash">FragmentSplash</string>
    <string name="fragment_states">FragmentStates</string>
    <string name="fragment_home">FragmentHome</string>
    <string name="view_empty_state">View Empty State</string>
    <string name="view_values_state">View Values State</string>
    <string name="select_any_options">Please, select any of the options.</string>
    <string name="bad_request_error">Bad request.</string>
    <string name="unauthorized_error">You are unauthorized to access this.</string>
    <string name="request_not_found_error">Request not Found.</string>
    <string name="something_went_wrong_error">Something went wrong!</string>
    <string name="no_internet_error">Failed to connect. Please, check your internet connection.</string>
    <string name="slow_internet_error">Slow internet connection. Please, check your connection.</string>
    <string name="request_timeout_error">Your request took too much time to respond. Please, try again!</string>
    <string name="list_is_empty_error">Data not found! List is empty.</string>
    <string name="deposit">Deposit</string>
    <string name="your_crypto_holdings">Your Crypto Holdings</string>
    <string name="buy">Buy</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="view_all">View all</string>
    <string name="current_prices">Current Prices</string>
    <string name="current_bal_in_usd">$%1s</string>
    <string name="current_bal_in_token">%1s %2s</string>
    <string name="txn_sub_amount">$150.22 (+8.51%)</string>
    <string name="_24h">24h</string>
    <string name="current_sub_amount">$300.22 (+21.51%)</string>
    <string name="_7_22">7.22%</string>
    <string name="fragment_view_all_transactions">FragmentViewAllTransactions</string>
    <string name="retry">Retry</string>
    <string name="bought">Bought %1s %2s</string>
    <string name="buy_price">Buy Price: $3744.93</string>
</resources>