<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_splash">

    <fragment
        android:id="@+id/fragment_splash"
        android:name="com.juno.junoandroidassignment.ui.fragments.FragmentSplash"
        android:label="@string/fragment_splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_go_to_home_screen"
            app:destination="@id/fragment_states"
            app:enterAnim="@anim/slide_in_right"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/fragment_states"
        android:name="com.juno.junoandroidassignment.ui.fragments.FragmentStates"
        android:label="@string/fragment_states"
        tools:layout="@layout/fragment_states">
        <action
            android:id="@+id/action_go_to_home_screen"
            app:destination="@id/fragment_home"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/fragment_home"
        android:name="com.juno.junoandroidassignment.ui.fragments.FragmentHome"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="state"
            app:argType="integer" />
    </fragment>

</navigation>